# requedit

./: .editorconfig  .release-it.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  README_zh.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  requedit.cer  requedit.key  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  event.rs  idgen.rs  lib.rs  main.rs  tray.rs  utils.rs
src-tauri/src/commands/: config.rs  mod.rs  proxy.rs  window.rs
src-tauri/src/menus/: mod.rs  system_tray.rs
src-tauri/src/mitm/: mod.rs  proxy.rs  proxy_handler.rs
src-tauri/src/plugin_proxy/: mod.rs  proxy_handler.rs  proxy_server.rs
src-tauri/src/proxy/: data.rs  handler.rs  mod.rs  server.rs  store.rs
src/api/: auth.ts
src/components/: detail.tsx  folder-tree.less  folder-tree.tsx  main-panel.tsx  req-panel.tsx  res-panel.tsx  theme-switch.tsx  toolbar.tsx  url-list.less  url-list.tsx
src/components/filters/: index.tsx  types.ts  useFilters.tsx
src/components/panels/: body.tsx
src/components/settings/: advanced.tsx  appearance.tsx  general.tsx  github.tsx  index.tsx  plugins.tsx  privacy.tsx
src/constants/: catetory.ts  event.ts  method.ts
src/hooks/: useHeight.ts
src/pages/: list.tsx
src/provides/: AppContext.ts  AppProvider.tsx
src/provides/websocket/: Websocket.ts  WebsocketProvider.tsx
src/utils/: index.ts  login.ts  parse-code.ts  request.ts
