[package]
name = "requedit"
version = "0.1.0"
description = "A proxy for editing request and response data"
authors = ["wstreet7 <wstreet7@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "requedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["full"] }
# tokio-tungstenite = "0.15"
# tungstenite = "0.17"
futures-util = "0.3"
hyper = { version = "0.14.7", features = ["http1", "http2", "client"] }
hyper-rustls = { version = "0.23.2", features = ["webpki-roots", "http2", "http1"] }
rustls = "0.20"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
tauri-plugin-positioner = "2"
# oauth2 = "4.0"
hudsucker = { version = "0.20.0", features = ["http2", "rustls-client", "native-tls-client"] }
chrono = "0.4"
bytes = "1"
http-serde = "1.1.3"
rcgen = { version = "0.10.0", features = ["x509-parser", "pem"] }
async-trait = "0.1.83"
time = { version = "0.3.1" }
tauri-plugin-shell = "2"
serde_yaml = "0.8.24"
shellexpand = "2.1.0"
once_cell = "1.17"
tauri-plugin-theme = "2.1.2"
hex = "0.4.3"
regex = "1.11.1"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
