[package]
name = "requedit"
version = "0.1.0"
description = "A proxy for editing request and response data"
authors = ["wstreet7 <wstreet7@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "requedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["full"] }
hyper = { version = "0.14.7", features = ["http1", "http2", "client"] }
rustls = "0.20"
rustls-pemfile = "1.0"
tauri-plugin-log = "2.0.0"
hudsucker = { version = "0.20.0", features = ["http2", "rustls-client", "native-tls-client"] }
bytes = "1"
# http-serde = "1.1.3"
rcgen = { version = "0.10.0", features = ["x509-parser", "pem"] }
async-trait = "0.1.83"
time = "0.3.1"
tauri-plugin-shell = "2"
serde_yaml = "0.8.24"
shellexpand = "2.1.0"
once_cell = "1.17"
tauri-plugin-theme = "2.1.2"
hex = "0.4.3"
regex = "1.11.1"
log = "^0.4"
