[package]
name = "requedit"
version = "0.2.1"
description = "A proxy for editing request and response data"
authors = [ "wstreet7 <wstreet7@outlook.com>" ]
edition = "2021"

[lib]
name = "requedit_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
version = "2"
features = [ ]

[dependencies]
serde_json = "1"
rustls = "0.20"
rustls-pemfile = "1.0"
tauri-plugin-log = "2.0.0"
bytes = "1"
async-trait = "0.1.83"
time = "0.3.1"
tauri-plugin-shell = "2"
serde_yaml = "0.8.24"
shellexpand = "2.1.0"
once_cell = "1.17"
tauri-plugin-theme = "2.1.2"
hex = "0.4.3"
regex = "1.11.1"
log = "^0.4"
chrono = "0.4.38"
url = "2.5.2"
flate2 = "1.0.34"
brotli = "3.3.4"
zstd = "0.11"

  [dependencies.tauri]
  version = "2"
  features = [ "tray-icon" ]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

  [dependencies.tokio]
  version = "1.38.0"
  features = [ "full" ]

  [dependencies.hyper]
  version = "0.14.7"
  features = [ "http1", "http2", "client" ]

  [dependencies.hudsucker]
  version = "0.20.0"
  features = [ "http2", "rustls-client", "native-tls-client" ]

  [dependencies.rcgen]
  version = "0.10.0"
  features = [ "x509-parser", "pem" ]
